import export changes fix